# hearts-ai

./: .gitignore  README.md  commit.sh  commit_amend_no_edit.sh  pyproject.toml
ai-train/: .gitignore  ai_service.py  card_embeddings.txt  common.py  game_states.json  json_dump.json  model.py  requirements.txt  train.py
ai-train-2/checkpoints/: model_20250315-143646.keras
ai-train-2/models/: model_20250316-120634_273709.keras
ai-train-2/src/: encoding.py  game_classes.py  game_state_extractor.py  msgpack_generator.py  test_transformer_model.py  tfm.py  train.py  transformer_encoding.py  transformer_model.py  transformer_model_main.py
ai-train/logs/: training_log.csv
cli/: .gitignore  Cargo.toml  ai-training-data.json  game_results.json
docs/: ai-training.md  game-models.md  hearts-game-training.md  input-sequences.md  notes.md
game-core/: Cargo.toml  game_results.json
game-core-py/: pyproject.toml
game-core-rs/: Cargo.toml
game-simulation/: .gitignore  Cargo.toml  game_results.json
generate_games/: pyproject.toml
generate_training/: pyproject.toml
generate_training/src/: generate_training.py
models/: latest.keras  model_20250319-031927_272324.keras  model_20250320-212050_273095.keras  model_20250320-230730_100.keras  model_20250321-134700_2734025.keras  model_20250325-093909_2.keras
predict_server/: pyproject.toml
predict_server/src/: __init__.py  main.py
request-models/: pyproject.toml
run-simulated-games/: Cargo.toml  game_results.json
scripts/: generate_games.sh  generate_train.sh  predict.sh  reinstall.sh  run_predict_server.sh  train.sh  ui.sh
strategies/: pyproject.toml
strategies/strategies/: __init__.py  aggressive.py  ai.py  avoid_points.py  human.py  monte_carlo.py  my.py  random.py  replay.py  simulation.py  strategies.py
train-model/: pyproject.toml  train-model.py  transformer_model.h5
train-model/src/: train-model.py
transformer/: pyproject.toml  requirements.txt
transformer/embeddings/: card_embeddings_10000.txt  trained_embeddings.txt
transformer/models/checkpoints/: model_epoch_001_20250315-231712.keras  model_epoch_001_20250318-223435.keras  model_epoch_002_20250318-223435.keras  model_epoch_003_20250315-231712.keras  model_epoch_003_20250318-223435.keras  model_epoch_004_20250318-223435.keras  model_epoch_008_20250318-223435.keras  model_epoch_013_20250318-223435.keras  model_epoch_014_20250318-223435.keras  model_epoch_015_20250318-223435.keras  model_epoch_021_20250315-231712.keras  model_epoch_024_20250318-223435.keras  model_epoch_028_20250315-231712.keras
transformer/src/: ai_service.py  game_classes.py  game_state_extractor.py  train.py  train_embeddings.py  transformer_encoding.py  transformer_model.py
transformer/transformer/: __init__.py  game_moves_filter.py  inputs.py  transformer_encoding.py  transformer_model.py
transformer2/: .gitignore
ui/: .gitignore  README.md  card.py  card_sprite.py  game_visualizer.py  hearts_game.py  pyproject.toml  requirements.txt
ui/src/: animation_manager.py  card.py  card_sprite.py  event_handler.py  game_moves_filter.py  game_renderer.py  game_state.py  game_visualizer.py  hearts_game.py  layout_manager.py  predict_request.py  strategies.py  training_data_viewer.py
(+122 files in other folders)
