[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "train-model"
version = "0.1.0"
description = "Train model for Hearts game"
authors = [{name = "Pedro Sousa"}]

dependencies = [
    "hearts_game_core",
    "strategies",
    "transformer",
]
