[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transformer"
version = "0.1.0"
description = "Hearts game transformer module"
authors = [{name = "Pedro Sousa"}]
dependencies = [
    "hearts_game_core",
    "request_models",
    "gensim==4.3.3",
    "matplotlib==3.10.1",
    "msgpack>=1.0.0",
    "numpy>=1.24.0",
    "pandas==2.2.0",
    "pydantic>=2.0.0",
    "scikit-learn>=1.6.1",
    "seaborn==0.13.2",
    "tensorflow-macos==2.16.2",
    "tensorflow-metal==1.2.0",
    "tensorflow>=2.15.0",
    "transformers>=4.36.0"
]